--- a/build.gradle
+++ b/build.gradle
@@ -40,13 +40,13 @@ springBoot {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.valentine.server.Application'
+        attributes 'Main-Class': 'com.rusinov.main.Application'
     }
 }
 
 dependencies {
 	compile("com.turn:ttorrent-core:1.5")
-	// compile("com.github.atomashpolskiy:bt-core:1.7")
+	compile("com.github.junrar:junrar:2.0.0")
 	compile("javax.validation:validation-api:2.0.1.Final")
     compile("org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE")   
 }
