--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	compile("com.turn:ttorrent-core:1.5")
 	compile("com.github.junrar:junrar:2.0.0")
 	compile("javax.validation:validation-api:2.0.1.Final")
+	compile("org.springframework.security:spring-security-web:4.2.2.RELEASE")
+	compile("org.springframework.security:spring-security-config:4.2.2.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE")   
 }
 
