--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("com.turn:ttorrent-core:1.5")	
+		classpath("javax.validation:validation-api:2.0.1.Final")
+		classpath("org.springframework.security:spring-security-web:4.2.2.RELEASE")
+		classpath("org.springframework.security:spring-security-config:4.2.2.RELEASE")
+	    classpath("org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE")   
 	}
 }
 
@@ -38,18 +43,14 @@ springBoot {
     executable = true
 }
 
-jar {
+war {
     manifest {
         attributes 'Main-Class': 'com.rusinov.main.Application'
     }
 }
 
 dependencies {
-	compile("com.turn:ttorrent-core:1.5")
-	compile("com.github.junrar:junrar:2.0.0")
-	
-	compile("com.github.axet:java-unrar:1.7.0-3")
-	
+	compile("com.turn:ttorrent-core:1.5")	
 	compile("javax.validation:validation-api:2.0.1.Final")
 	compile("org.springframework.security:spring-security-web:4.2.2.RELEASE")
 	compile("org.springframework.security:spring-security-config:4.2.2.RELEASE")
